# rustyhdf5

anndata_version/: adata_v1.14.6.h5ad
crates/rustyhdf5-derive/src/: lib.rs
crates/rustyhdf5-format/: Cargo.toml
crates/rustyhdf5-format/src/: attribute.rs  attribute_info.rs  btree_v1.rs  btree_v2.rs  chunk_cache.rs  chunked_read.rs  chunked_write.rs  data_layout.rs  data_read.rs  dataspace.rs  datatype.rs  error.rs  extensible_array.rs  file_writer.rs  filter_pipeline.rs  fixed_array.rs  fractal_heap.rs  global_heap.rs  group_info.rs  group_v1.rs  group_v2.rs  lib.rs  link_info.rs  link_message.rs  local_heap.rs  message_type.rs  metadata_index.rs  object_header.rs  parallel_read.rs  shared_message.rs  superblock.rs  symbol_table.rs  type_builders.rs  utils.rs  vl_data.rs
crates/rustyhdf5-format/tests/: reference_tests.rs  writer_h5py_tests.rs
crates/rustyhdf5/src/: writer.rs
crates/rustyhdf5/tests/: parallel_integration.rs
